added vet and visit connection, implemented visit search by vet, code cleanup
